kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team-taurus-backend
  labels:
    app: team-taurus-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: team-taurus-backend
  template:
    metadata:
      labels:
        app: team-taurus-backend
    spec:
      containers:
        - name: team-taurus-backend
          image: quay.io/yoshimitsu_egashira_ibm/team-taurus-backend
          ports:
            - containerPort: 3000
