kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team-taurus-backend-service
  labels:
    app: team-taurus-backend
spec:
  type: NodePort
  selector:
    app: team-taurus-backend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http-listener
